--- a/success_script/7.md
+++ b/success_script/7.md
@@ -19,7 +19,7 @@
 
 我要笑遍這個世界。
 
-世上的每件事真的都將過去。當我內心絞痛十，不妨自我安慰道：「這些都將過去」。當我自滿我的成功時，也要警惕自己：「這些都將過去」。
+世上的每件事真的都將過去。當我內心絞痛時，不妨自我安慰道：「這些都將過去」。當我自滿我的成功時，也要警惕自己：「這些都將過去」。
 
 是的，那些建造金字塔的人都到哪兒去了？不也被埋在塔理？而金字塔是否有一天也會被埋在泥沙堆理？如果一切都將過去，那我幹嘛對今天的事情斤斤計較？
 
