--- a/論語/泰伯第八.md
+++ b/論語/泰伯第八.md
@@ -32,7 +32,7 @@
 
 子曰：「學如不及，猶恐失之。」
 
-子曰：「巍巍乎，舜禹之有天下也，而不與焉。」（8.18/）
+子曰：「巍巍乎，舜禹之有天下也，而不與焉。」
 
 子曰：「大哉堯之為軍也，巍巍乎，唯天為大，唯堯則之，蕩蕩乎，民無能名焉。巍巍乎，其有成功也，煥乎，其有文章。」
 
