--- a/daily-coding-problem/001.md
+++ b/daily-coding-problem/001.md
@@ -9,3 +9,15 @@ For example, given `[10, 15, 3, 7]` and `k` of `17`, return true since `10 + 7` 
 Bonus: Can you do this in one pass?
 
 # Kotlin Solution
+
+假設題目如下
+
+```kotlin
+class Solution {
+    fun twoSum(nums: IntArray, target: Int): IntArray {
+       // 填空
+    }
+}
+```
+
+參考解法：[./kotlin/001.kt]
