--- a/daily-coding-problem/010.md
+++ b/daily-coding-problem/010.md
@@ -7,3 +7,7 @@ This problem was asked by Apple.
 Implement a job scheduler which takes in a function `f` and an integer `n`, and calls `f` after `n` milliseconds.
 
 ## Solutions
+
+這一題是觀念題，有很多可以討論的空間
+
+[參考解答](./kotlin/010.md)
