--- a/daily-coding-problem/037.md
+++ b/daily-coding-problem/037.md
@@ -8,14 +8,14 @@ The power set of a set is the set of all its subsets. Write a function that, giv
 
 For example, given the set 
 
-```kotlin
+```text
 {1, 2, 3}
 ```
 
 it should return 
 
-```kotlin
-{{1}, {2}, {3}, {1, 2}, {1, 3}, {2, 3}, {1, 2, 3}}
+```text
+{{}, {1}, {2}, {3}, {1, 2}, {1, 3}, {2, 3}, {1, 2, 3}}
 ```
 
 
