--- a/daily-coding-problem/001.md
+++ b/daily-coding-problem/001.md
@@ -10,6 +10,10 @@ Bonus: Can you do this in one pass?
 
 # Kotlin Solution
 
+參考 leet code 連接
+
+https://leetcode.com/problems/two-sum/
+
 假設題目如下
 
 ```kotlin
