--- a/daily-coding-problem/010.md
+++ b/daily-coding-problem/010.md
@@ -6,7 +6,7 @@ This problem was asked by Apple.
 
 Implement a job scheduler which takes in a function `f` and an integer `n`, and calls `f` after `n` milliseconds.
 
-## Solutions
+## Kotlin Solutions
 
 這一題是觀念題，有很多可以討論的空間
 
