--- a/daily-coding-problem/010.md
+++ b/daily-coding-problem/010.md
@@ -11,3 +11,7 @@ Implement a job scheduler which takes in a function `f` and an integer `n`, and 
 這一題是觀念題，有很多可以討論的空間
 
 [參考解答](./kotlin/010.md)
+
+## 參考資料
+
+https://stackoverflow.com/questions/55642383/calling-a-function-with-delay
