--- a/daily-coding-problem/027.md
+++ b/daily-coding-problem/027.md
@@ -12,6 +12,17 @@ Given the string `([)]` or `((()`, you should return false.
 
 ## Solutions
 
-## leetcode
+參考 leet code
 
 https://leetcode.com/problems/valid-parentheses/
+
+假設題目如下
+
+```kotlin
+class Solution {
+    fun isValid(s: String): Boolean {
+    }
+}
+```
+
+[參考解法](./kotlin/027.kt)
