Update and rename 001.kt to 001.md

--- a/daily-coding-problem/kotlin/001.md
+++ b/daily-coding-problem/kotlin/001.md
@@ -1,3 +1,4 @@
+```kotlin
 class Solution {
     fun twoSum(nums: IntArray, target: Int): IntArray {
         var map = hashMapOf<Int, Int>()
@@ -12,3 +13,4 @@ class Solution {
         throw IllegalArgumentException("No two sum solution");
     }
 }
+```
