--- a/daily-coding-problem/kotlin/027.md
+++ b/daily-coding-problem/kotlin/027.md
@@ -1,3 +1,4 @@
+```kotlin
 class Solution {
     fun isValid(s: String): Boolean {
         var deque = ArrayDeque<Char>()
@@ -26,3 +27,4 @@ class Solution {
         return true
     }
 }
+```
