--- a/daily-coding-problem/045.md
+++ b/daily-coding-problem/045.md
@@ -1,9 +1,18 @@
 # Problem 45
 
-#### Description
+## Description
 
 This problem was asked by Two Sigma.
 
 Using a function `rand5()` that returns an integer from `1` to `5` (inclusive) with uniform probability, implement a function `rand7()` that returns an integer from `1` to `7` (inclusive).
 
-### Solutions
+## Kotlin Solutions
+
+假設題目是
+
+class Solution : SolBase() {
+    fun rand7(): Int {
+    }
+}
+
+[參考解法](./kotlin/045)
