--- a/daily-coding-problem/045.md
+++ b/daily-coding-problem/045.md
@@ -10,9 +10,10 @@ Using a function `rand5()` that returns an integer from `1` to `5` (inclusive) w
 
 假設題目是
 
+```kotlin
 class Solution : SolBase() {
     fun rand7(): Int {
     }
 }
-
+```
 [參考解法](./kotlin/045)
