--- a/daily-coding-problem/129.md
+++ b/daily-coding-problem/129.md
@@ -6,4 +6,18 @@ Given a real number n, find the square root of n. For example, given n = 9, retu
 
 ### Solutions
 
-[參考解法](./kotlin/)
+參考 leet code 連接
+
+https://leetcode.com/problems/sqrtx/
+
+假設題目如下
+
+```kotlin
+class Solution {
+    fun mySqrt(x: Int): Int {
+        
+    }
+}
+```
+
+[參考解法](./kotlin/129)
