--- a/kotlin/leetcode/771.md
+++ b/kotlin/leetcode/771.md
@@ -1,4 +1,4 @@
-## 771. Jewels and Stones
+## Kotlin Leetcode - 771. Jewels and Stones
 
 題目連接： <https://leetcode.com/problems/jewels-and-stones/>
 
