--- a/kotlin/leetcode/26.md
+++ b/kotlin/leetcode/26.md
@@ -1,4 +1,4 @@
-## 26. Remove Duplicates from Sorted Array
+## Kotlin Leetcode - 26. Remove Duplicates from Sorted Array
 
 題目連接： <https://leetcode.com/problems/remove-duplicates-from-sorted-array/>
 
