--- a/kotlin/leetcode/231.md
+++ b/kotlin/leetcode/231.md
@@ -41,7 +41,7 @@ class Solution {
 
 ```kotlin
 class Solution {
-    fun isPowerOfTwo(n: Int) = when (true) {
+    fun isPowerOfTwo(n: Int) = when {
         n <= 0 -> false
         else -> (n and (n-1)) == 0
 	}
