--- a/kotlin/leetcode/404.md
+++ b/kotlin/leetcode/404.md
@@ -3,7 +3,7 @@
 
 ```kotlin
 class Solution {
-    fun isPalindrome(x: Int): Boolean {
+    fun sumOfLeftLeaves(root: TreeNode?): Int {
     }
 }
 ```
