--- a/kotlin/leetcode/9.md
+++ b/kotlin/leetcode/9.md
@@ -33,6 +33,17 @@ class Solution {
 }
 ```
 
+也可以用 `when` 改寫成單一表達式
+
+```kotlin
+class Solution {  
+    fun isPalindrome(x: Int) = when {  
+        x < 0 -> false  
+ else -> x.toString().reversed() == x.toString()  
+    }  
+}
+```
+
 </details>
 
 ------
