--- a/kotlin/leetcode/1.md
+++ b/kotlin/leetcode/1.md
@@ -38,8 +38,8 @@ class Solution {
 ```kotlin
 class Solution {
     fun twoSum(nums: IntArray, target: Int): IntArray {
-        var map = hashMapOf<Int, Int>()
-        for(i in 0..nums.size-1){
+        val map = hashMapOf<Int, Int>()
+        for(i in nums.indices){
             val temp = target - nums[i]
             if(map.containsValue(nums[i])){
                 val keys = map.filterValues { it == nums[i] }.keys
