--- a/kotlin/leetcode/1365.md
+++ b/kotlin/leetcode/1365.md
@@ -34,6 +34,18 @@ class Solution {
 }
 ```
 
+由於 leetcode 的檢查允許 `List<Int>` 做為答案
+
+我們可以省略 `toIntArray()` 的步驟
+
+```kotlin
+class Solution {
+    fun smallerNumbersThanCurrent(nums: IntArray) =
+        nums.map { value ->
+            nums.filter { num -> num < value }.size
+        }
+}
+```
 
 </details>
 
