--- a/kotlin/leetcode/58.md
+++ b/kotlin/leetcode/58.md
@@ -4,7 +4,8 @@
 
 ```kotlin
 class Solution {
-    fun strStr(haystack: String, needle: String): Int {
+    fun lengthOfLastWord(s: String): Int {
+        
     }
 }
 ```
