--- a/kotlin/leetcode/226.md
+++ b/kotlin/leetcode/226.md
@@ -4,8 +4,7 @@
 
 ```kotlin
 class Solution {
-    fun longestCommonPrefix(strs: Array<String>): String 
-{
+    fun invertTree(root: TreeNode?): TreeNode? {
     }
 }
 ```
