--- a/daily-coding-problem/001.md
+++ b/daily-coding-problem/001.md
@@ -24,4 +24,29 @@ class Solution {
 }
 ```
 
-[參考解法](./kotlin/001)
+## Kotlin 參考解答
+
+<details>
+  <summary>點擊展開解答</summary>
+
+```kotlin
+class Solution {
+    fun twoSum(nums: IntArray, target: Int): IntArray {
+        val map = hashMapOf<Int, Int>()
+        for (i in nums.indices) {
+            val temp = target - nums[i]
+            if (map.containsValue(nums[i])) {
+                val keys = map.filterValues { it == nums[i] }.keys
+                return intArrayOf(keys.first(), i)
+            }
+            map.put(i, temp)
+        }
+        throw IllegalArgumentException("No two sum solution")
+    }
+}
+```
+</details>
+
+-----
+
+回到 [daily coding problem 列表](index.md)
