--- a/kotlin/leetcode/231.md
+++ b/kotlin/leetcode/231.md
@@ -1,4 +1,4 @@
-## Kotlin Leetcode - 1. Two Sum
+## Kotlin Leetcode - 231. Power of Two
 
 題目連接： <https://leetcode.com/problems/power-of-two/>
 
@@ -44,7 +44,7 @@ class Solution {
     fun isPowerOfTwo(n: Int) = when {
         n <= 0 -> false
         else -> (n and (n-1)) == 0
-	}
+    }
 }
 ```
 
