--- a/kotlin/leetcode/231.md
+++ b/kotlin/leetcode/231.md
@@ -25,6 +25,13 @@ class Solution {
 <details>
   <summary>點擊展開解答</summary>
 
+當一個數字 n 的二進位是 `1(0*)` 這樣的結構時
+    
+我們可以知道 n-1 一定是 `1*` 的結構，並且比起 n 少一位
+
+因此我們可以發現，這兩個數字每個位數都是不一樣的
+
+因此 `(n and (n-1))` 答案為零
 
 ```kotlin
 class Solution {
