--- a/kotlin/leetcode/1.md
+++ b/kotlin/leetcode/1.md
@@ -45,7 +45,7 @@ class Solution {
                 val keys = map.filterValues { it == nums[i] }.keys
                 return intArrayOf(keys.first(), i)
             }
-            map.put(i, temp)
+            map[i] = temp
         }
         throw IllegalArgumentException("No two sum solution")
     }
