--- a/kotlin/leetcode/1.md
+++ b/kotlin/leetcode/1.md
@@ -51,6 +51,26 @@ class Solution {
     }
 }
 ```
+    
+其中 `for` 的部分可以改寫成 `forEachIndexed`
+    
+```kotlin
+class Solution {
+    fun twoSum(nums: IntArray, target: Int): IntArray {
+        val map = hashMapOf<Int, Int>()
+        nums.forEachIndexed { i, _ ->
+            val temp = target - nums[i]
+            if (map.containsValue(nums[i])) {
+                val keys = map.filterValues { it == nums[i] }.keys
+                return intArrayOf(keys.first(), i)
+            }
+            map[i] = temp
+        }
+        throw IllegalArgumentException("No two sum solution")
+    }
+}
+```
+
 </details>
 
 ------
