--- a/kotlin/leetcode/2.md
+++ b/kotlin/leetcode/2.md
@@ -31,7 +31,7 @@ class Solution {
         var carry = 0
 		
         while(node1 != null || node2 != null){
-            val sum = (n1?.`val` ?: 0) + (n2?.`val` ?: 0) + carry
+            val sum = (node1?.`val` ?: 0) + (node2?.`val` ?: 0) + carry
             cursor.next = ListNode(sum % 10)
             cursor = cursor.next
             
