--- a/daily-coding-problem/001.md
+++ b/daily-coding-problem/001.md
@@ -1,4 +1,4 @@
-# Description
+## Description
 
 This problem was asked by Google.
 
@@ -8,7 +8,7 @@ For example, given `[10, 15, 3, 7]` and `k` of `17`, return true since `10 + 7` 
 
 Bonus: Can you do this in one pass?
 
-# Kotlin Solution
+## Kotlin Solution
 
 參考 leet code 連接
 
@@ -24,7 +24,7 @@ class Solution {
 }
 ```
 
-## Kotlin 參考解答
+### Kotlin 參考解答
 
 <details>
   <summary>點擊展開解答</summary>
