--- a/kotlin/leetcode/1470.md
+++ b/kotlin/leetcode/1470.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun shuffle(nums: IntArray, n: Int): IntArray {
@@ -38,3 +41,9 @@ class Solution {
     }
 }
 ```
+
+</details>
+
+------
+
+回到 [leetcode 列表](index.md)
