--- a/kotlin/leetcode/1365.md
+++ b/kotlin/leetcode/1365.md
@@ -47,6 +47,32 @@ class Solution {
 }
 ```
 
+------
+
+要節省時間，我們可以先對陣列做排序
+
+這樣可以少比對一些元素
+
+```kotlin
+class Solution {
+    fun smallerNumbersThanCurrent(nums: IntArray): IntArray {
+        val result = IntArray(nums.size)
+        val sortedNums = nums.toMutableList()
+        sortedNums.sort()
+        val counts = mutableMapOf<Int,Int>()
+        sortedNums.forEachIndexed { index, item ->
+            if (!counts.contains(item)) {
+                counts[item] = index
+            }
+        }
+        nums.forEachIndexed { index, item ->
+            result[index] = counts[item] ?: throw Exception()
+        }
+        return result
+    }
+}
+```
+
 </details>
 
 ------
