--- a/kotlin/leetcode/1.md
+++ b/kotlin/leetcode/1.md
@@ -40,12 +40,11 @@ class Solution {
     fun twoSum(nums: IntArray, target: Int): IntArray {
         val map = hashMapOf<Int, Int>()
         for (i in nums.indices) {
-            val temp = target - nums[i]
-            if (map.containsValue(nums[i])) {
-                val keys = map.filterValues { it == nums[i] }.keys
-                return intArrayOf(keys.first(), i)
+            if (map.containsKey(target - nums[i])) {
+                val tmp = map[target - nums[i]]!!.toInt()
+                return intArrayOf(tmp, i)
             }
-            map[i] = temp
+            map[nums[i]] = i
         }
         throw IllegalArgumentException("No two sum solution")
     }
@@ -59,12 +58,11 @@ class Solution {
     fun twoSum(nums: IntArray, target: Int): IntArray {
         val map = hashMapOf<Int, Int>()
         nums.forEachIndexed { i, _ ->
-            val temp = target - nums[i]
-            if (map.containsValue(nums[i])) {
-                val keys = map.filterValues { it == nums[i] }.keys
-                return intArrayOf(keys.first(), i)
+            if (map.containsKey(target - nums[i])) {
+                val tmp = map[target - nums[i]]!!.toInt()
+                return intArrayOf(tmp, i)
             }
-            map[i] = temp
+            map[nums[i]] = i
         }
         throw IllegalArgumentException("No two sum solution")
     }
