--- a/kotlin/leetcode/70.md
+++ b/kotlin/leetcode/70.md
@@ -74,7 +74,7 @@ class Solution {
         return climbStairsRec(n, 1, 1)
     }
 
-    private fun climbStairsRec(n: Int, first: Int, second: Int): Int {
+    private tailrec fun climbStairsRec(n: Int, first: Int, second: Int): Int {
         return when (n) {
             1 -> second
             else -> climbStairsRec(n - 1, second, first + second)
