--- a/kotlin/leetcode/572.md
+++ b/kotlin/leetcode/572.md
@@ -40,6 +40,28 @@ class Solution {
 }
 ```
 
+相同的邏輯簡化後，可以改寫為
+
+```kotlin
+class Solution {
+    fun isSubtree(root: TreeNode?, subRoot: TreeNode?): Boolean {
+        return when {
+            root == null -> subRoot == null
+            root != null && subRoot == null -> false
+            else -> isSameTree(root, subRoot) || isSubtree(root.left, subRoot) || isSubtree(root.right, subRoot)
+        }
+    }
+
+    private fun isSameTree(s: TreeNode?, t: TreeNode?): Boolean {
+        return when {
+            s == null -> t == null
+            t == null -> s == null
+            s != null && t == null -> false
+            else -> s.`val` == t.`val` && isSameTree(s.left, t.left) && isSameTree(s.right, t.right)
+        }
+    }
+}
+```
 ------
 
 回到 [leetcode 列表](index.md)
