--- a/kotlin/leetcode/572.md
+++ b/kotlin/leetcode/572.md
@@ -47,7 +47,7 @@ class Solution {
     fun isSubtree(root: TreeNode?, subRoot: TreeNode?): Boolean {
         return when {
             root == null -> subRoot == null
-            root != null && subRoot == null -> false
+            subRoot == null -> false
             else -> isSameTree(root, subRoot) || isSubtree(root.left, subRoot) || isSubtree(root.right, subRoot)
         }
     }
@@ -55,8 +55,7 @@ class Solution {
     private fun isSameTree(s: TreeNode?, t: TreeNode?): Boolean {
         return when {
             s == null -> t == null
-            t == null -> s == null
-            s != null && t == null -> false
+            t == null -> false
             else -> s.`val` == t.`val` && isSameTree(s.left, t.left) && isSameTree(s.right, t.right)
         }
     }
