--- a/kotlin/leetcode/2396.md
+++ b/kotlin/leetcode/2396.md
@@ -42,6 +42,23 @@ class Solution {
 }
 ```
 
+不過，如果你仔細想題目的邏輯
+
+你會發現對任何輸入 `n` 來說
+
+`n-2` based 的字串都會是 `12`
+
+所以不可能是回文
+
+也就是說，所有輸入都不可能滿足條件
+
+```kotlin
+class Solution {
+    fun isStrictlyPalindromic(n: Int): Boolean {
+        return false
+    }
+}
+```
 ------
 
 回到 [leetcode 列表](index.md)
