--- a/kotlin/leetcode/2396.md
+++ b/kotlin/leetcode/2396.md
@@ -54,9 +54,7 @@ class Solution {
 
 ```kotlin
 class Solution {
-    fun isStrictlyPalindromic(n: Int): Boolean {
-        return false
-    }
+    fun isStrictlyPalindromic(n: Int): Boolean = false
 }
 ```
 ------
