--- a/kotlin/leetcode/2396.md
+++ b/kotlin/leetcode/2396.md
@@ -3,9 +3,10 @@
 題目連接：<https://leetcode.com/problems/strictly-palindromic-number/>
 
 ```kotlin
-class Solution {  
-    fun maxSubArray(nums: IntArray): Int {  
-    }  
+class Solution {
+    fun isStrictlyPalindromic(n: Int): Boolean {
+        
+    }
 }
 ```
 
