--- a/kotlin/leetcode/2469.md
+++ b/kotlin/leetcode/2469.md
@@ -30,6 +30,18 @@ class Solution {
 }
 ```
 
+或者我們也可以用 `listOf` 直接建立 List
+
+```kotlin
+class Solution {
+    fun convertTemperature(celsius: Double) = 
+        listOf(
+            celsius + 273.15, 
+            celsius * 1.80 + 32.00
+		)
+}
+```
+
 ------
 
 回到 [leetcode 列表](index.md)
