--- a/kotlin/leetcode/171.md
+++ b/kotlin/leetcode/171.md
@@ -21,7 +21,8 @@ class Solution {
 
 ```kotlin
 class Solution {
-    fun titleToNumber(columnTitle: String): Int = columnTitle.fold(0) { acc, ch -> 26 * acc + (ch - 'A').toInt() + 1 }
+    fun titleToNumber(columnTitle: String): Int = 
+        columnTitle.fold(0) { acc, ch -> 26 * acc + (ch - 'A').toInt() + 1 }
 }
 ```
 
