--- a/kotlin/leetcode/2194.md
+++ b/kotlin/leetcode/2194.md
@@ -23,7 +23,8 @@ class Solution {
 ```kotlin
 class Solution {
     fun cellsInRange(s: String) = mutableListOf<String>().apply {
-        (s.first()..s[3]).forEach {(Character.getNumericValue(s[1])..Character.getNumericValue(s.last())).forEach {
+        (s.first()..s[3]).forEach {
+            (Character.getNumericValue(s[1])..Character.getNumericValue(s.last())).forEach {
                 i -> add("$it$i")
             }
         }
