--- a/虛空藏菩薩經.md
+++ b/虛空藏菩薩經.md
@@ -139,7 +139,7 @@
 
 「若有眾生樂大慈悲，欲求救濟一切眾生，欲願安住阿耨多羅三藐三菩提，於阿練若處，若在林中，若於露地，燒堅黑沈水、多伽羅香，合掌恭敬，向於十方，五體投地，至心歸命虛空藏菩薩摩訶薩。而便說此陀羅尼咒：
 
-『阿蜜栗舍，阿蜜栗舍，迦樓尼迦，遮羅，遮羅，毘(薄履反下皆同)遮羅， 珊(素干反)遮羅，迦樓尼迦，羅母，羅母，母樓(力斗反下同)鞞(步倪反下皆同)迦陀，履摩目佉(去佐反)，浮樓闍婆(步可反)奈，迦樓尼迦，真多摩尼，富羅耶，迦樓尼迦，薩埵(都果反下同)舍迷(莫隸反吳音讀)他跛夜，阿若(而夜反)陀梨踣(怖得反下同)鈐(巨耽反下皆同)踣鈐羅底(都履反下同)毘鞞迦鈴臺(徒履反)栗致毘鞞迦鈐迦樓尼迦否(方久反)梨夜鬥，磨磨(武佐反)，阿奢(始迦反)薩埵，跛履，波迦夜，阿輸迦(居佐反)伽(巨左反)底，娑婆呵』
+『阿蜜栗舍，阿蜜栗舍，迦樓尼迦，遮羅，遮羅，毘（薄履反下皆同）遮羅， 珊（素干反）遮羅，迦樓尼迦，羅母，羅母，母樓（力斗反下同）鞞（步倪反下皆同）迦陀，履摩目佉（去佐反），浮樓闍婆（步可反）奈，迦樓尼迦，真多摩尼，富羅耶，迦樓尼迦，薩埵（都果反下同）舍迷（莫隸反吳音讀）他跛夜，阿若（而夜反）陀梨踣（怖得反下同）鈐（巨耽反下皆同）踣鈐羅底（都履反下同）毘鞞迦鈴臺（徒履反）栗致毘鞞迦鈐迦樓尼迦否（方久反）梨夜鬥，磨磨（武佐反），阿奢（始迦反）薩埵，跛履，波迦夜，阿輸迦（居佐反）伽（巨左反）底，娑婆呵』
 
 「善男子！是虛空藏菩薩摩訶薩，或現天像，或示人像，或獐鹿像，或為鳥像，或不現形，隨彼所應，以諸方便而為說法。化度無量那由他百千眾生，令住聲聞乘、辟支佛乘、及住大乘。又於少時，建立眾生，住於大乘，得阿鞞跋致，乃至令得諸深三昧及陀羅尼，滿足十地者。善男子！是虛空藏菩薩摩訶薩，具大慈悲。若人思量乃可能知虛空邊際，無能測量虛空藏菩薩摩訶薩智慧、方便、大慈、大悲、及三昧力、成熟眾生之邊際者。善男子！是虛空藏菩薩摩訶薩，成就如是不可思議功德智慧。
 
@@ -211,7 +211,7 @@
 
 「復次，善男子！種種眾生欲得三昧自在之力，應於後夜，淨自洗浴，著新潔衣，燒堅黑沉水及多伽羅香，於一切眾生起慈悲心，向於東方至心合掌，稱虛空藏菩薩名，而作是言：『憶持大智虛空藏，得大慈悲，唯願施我，不忘三昧。』即便說此陀羅尼言：
 
-『毆(於后反)漏母漏諾踦(去支反)博叉(楚垢反)底(都履反下皆同)隸(吳音讀之下同)娑勿陀邏婆(步可反)[多*頁](都可反)隸奈夜奈夜 摩訶迦樓尼迦　阿[少/兔](奴后反)播閻(市鹽反)婆(薄賀反下閻婆皆同)悉寐(莫履反下皆同)栗底　西伽(巨左反)羅閻婆悉寐栗底跋(薄葛反)闍邏闍婆悉[寐-爿+(怡-台)]栗底盧舍悉[寐-爿+(怡-台)]栗底　阿婆(步可反)遮奈悉[寐-爿+(怡-台)]栗底　浮侈(邪賀反)俱致悉[寐-爿+(怡-台)]栗底　娑婆呵』
+『毆（於后反）漏母漏諾踦（去支反）博叉（楚垢反）底（都履反下皆同）隸（吳音讀之下同）娑勿陀邏婆（步可反）[多＊頁]隸奈夜奈夜 摩訶迦樓尼迦　阿[少/兔]（奴后反）播閻（市鹽反）婆（薄賀反下閻婆皆同）悉寐（莫履反下皆同）栗底　西伽（巨左反）羅閻婆悉寐栗底跋（薄葛反）闍邏闍婆悉[寐-爿+（怡-台）]栗底盧舍悉[寐-爿+（怡-台）]栗底　阿婆（步可反）遮奈悉[寐-爿+（怡-台）]栗底　浮侈（邪賀反）俱致悉[寐-爿+（怡-台）]栗底　娑婆呵』
 
 「善男子！是虛空藏菩薩摩訶薩，即令彼人得於三昧自在之力。
 
@@ -247,7 +247,7 @@
 
 虛空藏菩薩白佛言：「世尊！各各相倚，互作境界，又復各各不為境界。一切諸法皆悉空寂，一切諸法皆悉虛假，一切諸法皆依於如、及以實際。世尊！猶如虛空無壞無成，無憶想分別，無動無搖，無愛無憎，無芽無種無果，無業無報，離於文字。世尊！一切諸法亦復如是。菩薩若知此者，是名善知諸法之性，得無生忍。」
 
-爾時，虛空藏菩薩摩訶薩，即說陀羅尼言：「阿[少/兔](奴侯反)柰，阿婢(夫者反)婆(薄賀反)邏闍(市夜反)摩(莫可反)[少/兔](奴后反)叉夜　視柰視柰　闍柰毘(夫尼反)磨(武佐反下皆同)牟尼呵羅阿柰夜　頗邏(力可反下同)臼呵(乎賀反)揭(巨謁反)婆禰(奴履反)婆(薄賀反)藪毘(薄履反下同)毘柰夜　藪舍舍婆　舍柰磨舍柰[多*頁](都可反下皆同)他(吐賀反)磨柰末兜梵(扶豔反)毘沙(所賀反)舍磨支[多*頁]奈枳(已紙反)黎舍菴(於甘反)復(扶豆反)僧輸沙(疏馬反)泥(奴帝反)娑婆呵」
+爾時，虛空藏菩薩摩訶薩，即說陀羅尼言：「阿[少/兔]（奴侯反）柰，阿婢（夫者反）婆（薄賀反）邏闍（市夜反）摩（莫可反）[少/兔]（奴后反）叉夜　視柰視柰　闍柰毘（夫尼反）磨（武佐反下皆同）牟尼呵羅阿柰夜　頗邏（力可反下同）臼呵（乎賀反）揭（巨謁反）婆禰（奴履反）婆（薄賀反）藪毘（薄履反下同）毘柰夜　藪舍舍婆　舍柰磨舍柰[多＊頁]（都可反下皆同）他（吐賀反）磨柰末兜梵（扶豔反）毘沙（所賀反）舍磨支[多＊頁]奈枳（已紙反）黎舍菴（於甘反）復（扶豆反）僧輸沙（疏馬反）泥（奴帝反）娑婆呵」
 
 爾時，世尊告虛空藏菩薩摩訶薩言：「善哉！善哉！汝今說此無盡降伏狮子奮迅陀羅尼。一切眾生臨命終時，最後神識，有重煩惱障及重惡業，此陀羅尼悉能燒燃，令得往生清淨佛國。善男子！汝今善能以此成熟無量眾生，又能成熟無量佛剎、村園、城邑一切眾生，又隨所應，現種種形，又隨其根，說種種法，或為演說大乘經典，開深法門。若沙門旃陀羅，婆羅門旃陀羅，剎帝利旃陀羅，毘舍旃陀羅，首陀羅旃陀羅，此諸人等，所犯重罪，以因汝故，悉得燒燃，今於善法建立增長。」爾時，世尊而說偈言：
 
