--- a/kotlin/leetcode/1662.md
+++ b/kotlin/leetcode/1662.md
@@ -16,6 +16,8 @@ class Solution {
 
 透過 `reduce` 將陣列歸約成一個單一字串
 
+或者使用 `joinToString`
+
 可以很快的解決這個問題
 
 ## Kotlin 參考解答
@@ -24,6 +26,15 @@ class Solution {
 class Solution {
     fun arrayStringsAreEqual(word1: Array<String>, word2: Array<String>): Boolean =
     word1.reduce {acc, e -> acc + e} == word2.reduce {acc, e -> acc + e}
+}
+```
+
+使用 `joinToString`
+
+```kotlin
+class Solution {
+    fun arrayStringsAreEqual(word1: Array<String>, word2: Array<String>): Boolean =
+    word1.joinToString("") == word2.joinToString("")
 }
 ```
 
