--- a/楞嚴神咒.md
+++ b/楞嚴神咒.md
@@ -27,11 +27,11 @@
 
 南無悉陀耶。毗地耶。陀囉離瑟赧。
 
+
+
 舍波奴揭囉訶。 娑訶娑囉摩他喃。
 
 南無跋囉訶摩泥。
-
-
 
 南無因陀囉耶。
 
@@ -53,6 +53,8 @@
 
 南無婆伽婆帝。
 
+
+
 摩訶迦囉耶。
 
 地唎般剌那伽囉。
@@ -60,8 +62,6 @@
 毗陀囉波拏迦囉耶。
 
 阿地目帝。
-
-
 
 屍摩舍那泥婆悉泥。
 
@@ -79,6 +79,8 @@
 
 南無摩尼俱囉耶。
 
+
+
 南無伽闍俱囉耶。
 
 南無婆伽婆帝。
@@ -91,8 +93,6 @@
 
 南無婆伽婆帝。
 
-
-
 南無阿彌多婆耶。
 
 跢他伽多耶。
@@ -104,6 +104,8 @@
 南無婆伽婆帝。
 
 阿芻毗耶。
+
+
 
 跢他伽多耶。
 
@@ -121,8 +123,6 @@
 
 南無婆伽婆帝。
 
-
-
 三補師毖多。
 
 薩憐捺囉剌闍耶。
@@ -130,6 +130,8 @@
 跢他伽多耶。
 
 阿囉訶帝。
+
+
 
 三藐三菩陀耶。
 
@@ -151,11 +153,11 @@
 
 阿囉訶帝。
 
-
-
 三藐三菩陀耶。
 
 帝瓢。南無薩羯唎多。
+
+
 
 翳曇婆伽婆多。
 
@@ -179,7 +181,7 @@
 
 薩囉婆。槃陀那。目叉尼。
 
-薩囉婆。突瑟吒。。
+薩囉婆。突瑟吒。
 
 
 
@@ -207,11 +209,11 @@
 
 呼藍突悉乏。難遮那舍尼。
 
+
+
 毖沙舍。悉怛囉。
 
 阿吉尼。烏陀迦囉若闍。。
-
-
 
 阿般囉視多具囉。
 
@@ -233,6 +235,8 @@
 
 跋闍囉摩禮底。
 
+
+
 毗舍嚧多。
 
 勃騰罔迦。
@@ -242,8 +246,6 @@
 摩囉制婆。般囉質多。
 
 跋闍囉擅持。
-
-
 
 毗舍囉遮。
 
@@ -259,6 +261,8 @@
 
 跋闍囉商羯囉制婆。
 
+
+
 跋闍囉俱摩唎。
 
 俱藍陀唎。
@@ -273,8 +277,6 @@
 
 夜囉菟。瑟尼釤。
 
-
-
 毗折藍婆摩尼遮。
 
 跋闍囉迦那迦波囉婆。
@@ -284,6 +286,8 @@
 稅多遮。迦摩囉。
 
 剎奢屍。波囉婆。
+
+
 
 翳帝夷帝。
 
@@ -325,11 +329,11 @@
 
 都嚧雍。
 
+
+
 波囉瑟地耶。三般叉拏羯囉。
 
 虎𤙖。
-
-
 
 都嚧雍。
 
@@ -351,6 +355,8 @@
 
 虎𤙖。
 
+
+
 都嚧雍。
 
 囉叉。
@@ -358,8 +364,6 @@
 婆伽梵。
 
 薩怛他。伽都瑟尼釤。
-
-
 
 波囉點闍吉唎。
 
@@ -377,6 +381,8 @@
 
 帝唎菩婆那。
 
+
+
 曼茶囉。
 
 烏𤙖。
@@ -386,6 +392,8 @@
 麼麼。
 
 印菟那麼麼寫。
+
+
 
 ### 第三會
 
@@ -415,11 +423,11 @@
 
 烏囉迦婆多婆夜。
 
+
+
 剌闍壇茶婆夜。
 
-那伽婆夜。。
-
-
+那伽婆夜。
 
 毗條怛婆夜。
 
@@ -441,15 +449,15 @@
 
 迦吒補丹那揭囉訶。
 
+
+
 悉乾度揭囉訶。
 
 阿播悉摩囉揭囉訶。
 
 烏檀摩陀揭囉訶。
 
-車夜揭囉訶。。
-
-
+車夜揭囉訶。
 
 醯唎婆帝揭囉訶。
 
@@ -467,6 +475,8 @@
 
 闍多訶唎女。
 
+
+
 視比多訶唎喃。
 
 毗多訶唎喃。
@@ -479,8 +489,6 @@
 
 帝釤薩鞞釤。
 
-
-
 薩婆揭囉訶南。
 
 毗陀耶闍。嗔陀夜彌。
@@ -492,6 +500,8 @@
 毗陀夜闍。嗔陀夜彌。
 
 雞囉夜彌。
+
+
 
 茶演尼。訖唎擔。
 
@@ -509,8 +519,6 @@
 
 那囉夜拏。訖唎擔。。
 
-
-
 毗陀夜闍。瞋陀夜彌。
 
 雞囉夜彌。
@@ -518,6 +526,8 @@
 怛埵伽嚧茶西。訖唎擔。
 
 毗陀耶闍。瞋陀夜彌。
+
+
 
 雞囉夜彌。
 
@@ -537,13 +547,13 @@
 
 薩婆囉他。娑達那。訖唎擔。
 
-毗陀夜闍。瞋陀夜彌。。
-
-
+毗陀夜闍。瞋陀夜彌。
 
 雞囉夜彌。
 
 赭咄囉婆耆你。訖唎擔。
+
+
 
 毗陀夜闍。瞋陀夜彌。
 
@@ -567,7 +577,7 @@
 
 阿羅漢。訖唎擔。
 
-毗陀夜闍。瞋陀夜彌。。
+毗陀夜闍。瞋陀夜彌。
 
 
 
@@ -621,11 +631,11 @@
 
 娑訶。醯醯泮。
 
+
+
 阿牟迦耶泮。
 
 阿波囉提訶多泮。。
-
-
 
 婆囉波囉陀泮。
 
@@ -647,15 +657,15 @@
 
 薩婆突澀比𠼝。訖瑟帝弊泮。
 
+
+
 薩婆什婆𠼝弊泮。
 
 薩婆阿播悉摩𠼝弊泮。
 
 薩婆舍囉婆拏弊泮。
 
-薩婆地帝雞弊泮。。
-
-
+薩婆地帝雞弊泮。
 
 薩婆怛摩陀繼弊泮。
 
@@ -673,6 +683,8 @@
 
 毗陀夜。囉誓弊泮。
 
+
+
 摩訶波囉丁羊。義耆唎弊泮。
 
 跋闍囉。商羯囉夜。
@@ -683,9 +695,7 @@
 
 摩訶末怛唎迦拏。
 
-南無娑羯唎多夜泮。。
-
-
+南無娑羯唎多夜泮。
 
 毖瑟拏婢曳泮。
 
@@ -698,6 +708,8 @@
 羯囉檀遲曳泮。
 
 蔑怛唎曳泮。
+
+
 
 嘮怛唎曳泮。
 
@@ -713,7 +725,7 @@
 
 演吉質。薩埵婆寫。
 
-麼麼。印菟那麼麼寫。。
+麼麼。印菟那麼麼寫。
 
 
 
@@ -749,11 +761,11 @@
 
 布史波訶囉。
 
+
+
 頗囉訶囉。
 
-婆寫訶囉。。
-
-
+婆寫訶囉。
 
 般波質多。
 
@@ -775,15 +787,15 @@
 
 悉乾陀揭囉訶。
 
+
+
 烏怛陀摩揭囉訶。
 
 車夜揭囉訶。
 
 阿播薩摩囉揭囉訶。
 
-宅祛革茶耆尼揭囉訶。。
-
-
+宅祛革茶耆尼揭囉訶。
 
 唎佛帝揭囉訶。
 
@@ -801,6 +813,8 @@
 
 墜帝藥迦。
 
+
+
 怛隸帝藥迦。
 
 者突託迦。
@@ -813,8 +827,6 @@
 
 室隸瑟蜜迦。
 
-
-
 娑你般帝迦。
 
 薩婆什伐囉。
@@ -826,6 +838,8 @@
 阿綺嚧鉗。
 
 目佉嚧鉗。
+
+
 
 羯唎突嚧鉗。
 
@@ -843,8 +857,6 @@
 
 烏陀囉輸藍。
 
-
-
 羯知輸藍。
 
 跋悉帝輸藍。
@@ -852,6 +864,8 @@
 鄔嚧輸藍。
 
 常迦輸藍。
+
+
 
 喝悉多輸藍。
 
@@ -873,11 +887,11 @@
 
 阿耆尼。烏陀迦。
 
-
-
 末囉鞞囉建跢囉。
 
 阿迦囉。蜜唎咄。怛歛部迦。
+
+
 
 地栗剌吒。
 
