--- a/楞嚴神咒.md
+++ b/楞嚴神咒.md
@@ -27,7 +27,7 @@
 
 南無悉陀耶。毗地耶。陀囉離瑟赧。
 
-
+----
 
 舍波奴揭囉訶。 娑訶娑囉摩他喃。
 
@@ -53,7 +53,7 @@
 
 南無婆伽婆帝。
 
-
+----
 
 摩訶迦囉耶。
 
@@ -79,7 +79,7 @@
 
 南無摩尼俱囉耶。
 
-
+----
 
 南無伽闍俱囉耶。
 
@@ -105,7 +105,7 @@
 
 阿芻毗耶。
 
-
+----
 
 跢他伽多耶。
 
@@ -131,7 +131,7 @@
 
 阿囉訶帝。
 
-
+----
 
 三藐三菩陀耶。
 
@@ -157,7 +157,7 @@
 
 帝瓢。南無薩羯唎多。
 
-
+----
 
 翳曇婆伽婆多。
 
@@ -183,7 +183,7 @@
 
 薩囉婆。突瑟吒。
 
-
+----
 
 突悉乏。般那你。伐囉尼。
 
@@ -209,7 +209,7 @@
 
 呼藍突悉乏。難遮那舍尼。
 
-
+----
 
 毖沙舍。悉怛囉。
 
@@ -235,7 +235,7 @@
 
 跋闍囉摩禮底。
 
-
+----
 
 毗舍嚧多。
 
@@ -261,7 +261,7 @@
 
 跋闍囉商羯囉制婆。
 
-
+----
 
 跋闍囉俱摩唎。
 
@@ -287,7 +287,7 @@
 
 剎奢屍。波囉婆。
 
-
+----
 
 翳帝夷帝。
 
@@ -298,8 +298,6 @@
 掘梵都。
 
 印菟那麼麼寫。
-
-
 
 ### 第二會
 
@@ -329,7 +327,7 @@
 
 都嚧雍。
 
-
+----
 
 波囉瑟地耶。三般叉拏羯囉。
 
@@ -355,7 +353,7 @@
 
 虎𤙖。
 
-
+----
 
 都嚧雍。
 
@@ -381,7 +379,7 @@
 
 帝唎菩婆那。
 
-
+----
 
 曼茶囉。
 
@@ -423,7 +421,7 @@
 
 烏囉迦婆多婆夜。
 
-
+----
 
 剌闍壇茶婆夜。
 
@@ -449,7 +447,7 @@
 
 迦吒補丹那揭囉訶。
 
-
+----
 
 悉乾度揭囉訶。
 
@@ -475,7 +473,7 @@
 
 闍多訶唎女。
 
-
+----
 
 視比多訶唎喃。
 
@@ -501,7 +499,7 @@
 
 雞囉夜彌。
 
-
+----
 
 茶演尼。訖唎擔。
 
@@ -527,7 +525,7 @@
 
 毗陀耶闍。瞋陀夜彌。
 
-
+----
 
 雞囉夜彌。
 
@@ -553,7 +551,7 @@
 
 赭咄囉婆耆你。訖唎擔。
 
-
+----
 
 毗陀夜闍。瞋陀夜彌。
 
@@ -579,7 +577,7 @@
 
 毗陀夜闍。瞋陀夜彌。
 
-
+----
 
 雞囉夜彌。
 
@@ -631,11 +629,11 @@
 
 娑訶。醯醯泮。
 
-
+----
 
 阿牟迦耶泮。
 
-阿波囉提訶多泮。。
+阿波囉提訶多泮。
 
 婆囉波囉陀泮。
 
@@ -657,7 +655,7 @@
 
 薩婆突澀比𠼝。訖瑟帝弊泮。
 
-
+----
 
 薩婆什婆𠼝弊泮。
 
@@ -683,7 +681,7 @@
 
 毗陀夜。囉誓弊泮。
 
-
+----
 
 摩訶波囉丁羊。義耆唎弊泮。
 
@@ -709,7 +707,7 @@
 
 蔑怛唎曳泮。
 
-
+----
 
 嘮怛唎曳泮。
 
@@ -727,15 +725,9 @@
 
 麼麼。印菟那麼麼寫。
 
-
-
 ### 第五會
 
-
-
 (名為文殊弘傳會。自初分領、往護、代問、揀選，及後請名，非大智德首則不能也。)
-
-
 
 突瑟吒質多。
 
@@ -761,7 +753,7 @@
 
 布史波訶囉。
 
-
+----
 
 頗囉訶囉。
 
@@ -787,7 +779,7 @@
 
 悉乾陀揭囉訶。
 
-
+----
 
 烏怛陀摩揭囉訶。
 
@@ -813,7 +805,7 @@
 
 墜帝藥迦。
 
-
+----
 
 怛隸帝藥迦。
 
@@ -839,7 +831,7 @@
 
 目佉嚧鉗。
 
-
+----
 
 羯唎突嚧鉗。
 
@@ -865,7 +857,7 @@
 
 常迦輸藍。
 
-
+----
 
 喝悉多輸藍。
 
@@ -891,7 +883,7 @@
 
 阿迦囉。蜜唎咄。怛歛部迦。
 
-
+----
 
 地栗剌吒。
 
@@ -917,7 +909,7 @@
 
 帝殊。槃曇迦嚧彌。
 
-
+----
 
 般囉毗陀。槃曇迦嚧彌。
 
