--- a/法華經/序品第一.md
+++ b/法華經/序品第一.md
@@ -4,7 +4,7 @@
 
 妙法蓮華經序品第一
 
-　　如是我聞。一時、佛住王舍城、耆闍崛山中，與大比丘眾萬二千人俱。皆是阿羅漢，諸漏已盡，無復煩惱，逮得己利，盡諸有結，心得自在。其名曰：阿若憍陳如、摩訶迦葉、優樓頻螺迦葉、伽耶迦葉、那提迦葉、舍利弗、大目犍連、摩訶迦旃延、阿冕樓馱、劫賓那、憍梵波提、離婆多、畢陵伽婆蹉、薄拘羅、摩訶拘絺羅、難陀、孫陀羅難陀、富樓那彌多羅尼子、須菩提、阿難、羅睺羅，如是眾所知識、大阿羅漢等。
+　　如是我聞。一時、佛住王舍城、耆闍崛山中，與大比丘眾萬二千人俱。皆是阿羅漢，諸漏已盡，無復煩惱，逮得己利，盡諸有結，心得自在。其名曰：阿若憍陳如、摩訶迦葉、優樓頻螺迦葉、伽耶迦葉、那提迦葉、舍利弗、大目犍連、摩訶迦旃延、阿㝹樓馱、劫賓那、憍梵波提、離婆多、畢陵伽婆蹉、薄拘羅、摩訶拘絺羅、難陀、孫陀羅難陀、富樓那彌多羅尼子、須菩提、阿難、羅睺羅，如是眾所知識、大阿羅漢等。
 
 　　復有學、無學二千人。摩訶波闍波提比丘尼，與眷屬六千人俱。羅睺羅母耶輸陀羅比丘尼，亦與眷屬俱。菩薩摩訶薩八萬人，皆於阿耨多羅三藐三菩提不退轉，皆得陀羅尼。樂說辯才，轉不退轉法輪。供養無量百千諸佛，於諸佛所、植眾德本，常為諸佛之所稱歎。以慈修身，善入佛慧。通達大智，到於彼岸。名稱普聞無量世界，能度無數百千眾生。其名曰：文殊師利菩薩、觀世音菩薩、得大勢菩薩、常精進菩薩、不休息菩薩、寶掌菩薩、藥王菩薩、勇施菩薩、寶月菩薩、月光菩薩、滿月菩薩、大力菩薩、無量力菩薩、越三界菩薩、跋陀婆羅菩薩、彌勒菩薩、寶積菩薩、導師菩薩，如是等菩薩摩訶薩八萬人俱。
 
