--- a/kotlin/leetcode/21.md
+++ b/kotlin/leetcode/21.md
@@ -70,6 +70,31 @@ class Solution {
 }
 ```
 
+遞迴的解法
+
+```kotlin
+/**
+ * Example:
+ * var li = ListNode(5)
+ * var v = li.`val`
+ * Definition for singly-linked list.
+ * class ListNode(var `val`: Int) {
+ *     var next: ListNode? = null
+ * }
+ */
+class Solution {
+    fun mergeTwoLists(list1: ListNode?, list2: ListNode?): ListNode? {
+        return when {
+            list1 == null && list2 == null -> null
+            list1 == null -> list2
+            list2 == null -> list1
+            list1.`val` < list2.`val` -> list1.also {list1.next = mergeTwoLists(list1.next, list2)}
+            else -> list2.also {list2.next = mergeTwoLists(list2.next, list1)}
+        }
+    }
+}
+```
+
 </details>
 
 ------
