--- a/kotlin/leetcode/1.md
+++ b/kotlin/leetcode/1.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1. Two Sum
 
-題目連接： <https://leetcode.com/problems/two-sum/>
+[題目連接](https://leetcode.com/problems/two-sum/)
 
 
 ```kotlin
