--- a/kotlin/leetcode/10.md
+++ b/kotlin/leetcode/10.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 10. Regular Expression Matching
 
-題目連接：<https://leetcode.com/problems/regular-expression-matching/>
+[題目連接](https://leetcode.com/problems/regular-expression-matching/)
 
 ```kotlin
 class Solution {
