--- a/kotlin/leetcode/100.md
+++ b/kotlin/leetcode/100.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 100. Same Tree
 
-題目連接：<https://leetcode.com/problems/same-tree/>
+[題目連接](https://leetcode.com/problems/same-tree/)
 
 ```kotlin
 /**
@@ -61,7 +61,7 @@ class Solution {
 }
 ```
 
-用 when 單一表達式內完成的方式如下
+用 `when` 單一表達式內完成的方式如下
 
 ```kotlin
 class Solution {
