--- a/kotlin/leetcode/101.md
+++ b/kotlin/leetcode/101.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 101. Symmetric Tree
 
-題目連接：<https://leetcode.com/problems/symmetric-tree/>
+[題目連接](https://leetcode.com/problems/symmetric-tree/)
 
 ```kotlin
 class Solution {  
@@ -19,8 +19,8 @@ class Solution {
 - 如果左邊和右邊都是 null，回傳 true
 - 如果左邊的值和右邊的值不同，回傳 false
 - 遞迴比較
-	- 左邊 node 的左邊，和右邊 node 的右邊
-	- 左邊 node 的右邊，和右邊 node 的左邊
+    - 左邊 node 的左邊，和右邊 node 的右邊
+    - 左邊 node 的右邊，和右邊 node 的左邊
 
 ## Kotlin 參考解答
 
@@ -41,7 +41,8 @@ class Solution {
             return false
         }
         
-        return isSubtreeSymmetric(left?.left, right?.right) && isSubtreeSymmetric(left?.right, right?.left)
+        return isSubtreeSymmetric(left?.left, right?.right)
+            && isSubtreeSymmetric(left?.right, right?.left)
     }
 }
 ```
@@ -59,7 +60,8 @@ class Solution {
         when {
             left == null && right == null ->  true
             left?.`val` != right?.`val` -> false
-            else -> isSubtreeSymmetric(left?.left, right?.right) && isSubtreeSymmetric(left?.right, right?.left)
+            else -> isSubtreeSymmetric(left?.left, right?.right)
+                && isSubtreeSymmetric(left?.right, right?.left)
         }
     
 }
