--- a/kotlin/leetcode/1022.md
+++ b/kotlin/leetcode/1022.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1022. Sum of Root To Leaf Binary Numbers
 
-題目連接：<https://leetcode.com/problems/sum-of-root-to-leaf-binary-numbers/>
+[題目連接](https://leetcode.com/problems/sum-of-root-to-leaf-binary-numbers/)
 
 ```kotlin
 class Solution {
