--- a/kotlin/leetcode/104.md
+++ b/kotlin/leetcode/104.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 104. Maximum Depth of Binary Tree
 
-題目連接：<https://leetcode.com/problems/maximum-depth-of-binary-tree/>
+[題目連接](https://leetcode.com/problems/maximum-depth-of-binary-tree/)
 
 ```kotlin
 class Solution {  
