--- a/kotlin/leetcode/1051.md
+++ b/kotlin/leetcode/1051.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1051. Height Checker
 
-題目連接：<https://leetcode.com/problems/height-checker/>
+[題目連接](https://leetcode.com/problems/height-checker/)
 
 ```kotlin
 class Solution {
@@ -68,8 +68,6 @@ class Solution {
     }
 }
 ```
-
-
 
 </details>
 
