--- a/kotlin/leetcode/1071.md
+++ b/kotlin/leetcode/1071.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1071. Greatest Common Divisor of Strings
 
-題目連接：<https://leetcode.com/problems/greatest-common-divisor-of-strings/>
+[題目連接](https://leetcode.com/problems/greatest-common-divisor-of-strings/)
 
 ```kotlin
 class Solution {
