--- a/kotlin/leetcode/110.md
+++ b/kotlin/leetcode/110.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 110. Balanced Binary Tree
 
-題目連接：<https://leetcode.com/problems/balanced-binary-tree/>
+[題目連接](https://leetcode.com/problems/balanced-binary-tree/)
 
 ```kotlin
 /**
