--- a/kotlin/leetcode/1108.md
+++ b/kotlin/leetcode/1108.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1108. Defanging an IP Address
 
-題目連接：<https://leetcode.com/problems/defanging-an-ip-address/>
+[題目連接](https://leetcode.com/problems/defanging-an-ip-address/)
 
 ```kotlin
 class Solution {
