--- a/kotlin/leetcode/118.md
+++ b/kotlin/leetcode/118.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 118. Pascal's Triangle
 
-題目連接：<https://leetcode.com/problems/pascals-triangle/>
+[題目連接](https://leetcode.com/problems/pascals-triangle/)
 
 ```kotlin
 class Solution {
