--- a/kotlin/leetcode/12.md
+++ b/kotlin/leetcode/12.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 12. Integer to Roman
 
-題目連接：<https://leetcode.com/problems/integer-to-roman/>
+[題目連接](https://leetcode.com/problems/integer-to-roman/)
 
 ```kotlin
 class Solution {
