--- a/kotlin/leetcode/121.md
+++ b/kotlin/leetcode/121.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 121. Best Time to Buy and Sell Stock
 
-題目連接：<https://leetcode.com/problems/best-time-to-buy-and-sell-stock/>
+[題目連接](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)
 
 ```kotlin
 class Solution {  
