--- a/kotlin/leetcode/1221.md
+++ b/kotlin/leetcode/1221.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1221. Split a String in Balanced Strings
 
-題目連接：<https://leetcode.com/problems/split-a-string-in-balanced-strings/>
+[題目連接](https://leetcode.com/problems/split-a-string-in-balanced-strings/)
 
 ```kotlin
 class Solution {
