--- a/kotlin/leetcode/125.md
+++ b/kotlin/leetcode/125.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 125. Valid Palindrome
 
-題目連接：<https://leetcode.com/problems/valid-palindrome/>
+[題目連接](https://leetcode.com/problems/valid-palindrome/)
 
 ```kotlin
 class Solution {
