--- a/kotlin/leetcode/13.md
+++ b/kotlin/leetcode/13.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 13. Roman to Integer
 
-題目連接： <https://leetcode.com/problems/roman-to-integer/>
+[題目連接](https://leetcode.com/problems/roman-to-integer/)
 
 ```kotlin
 class Solution {
