--- a/kotlin/leetcode/1323.md
+++ b/kotlin/leetcode/1323.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1323. Maximum 69 Number
 
-題目連接：<https://leetcode.com/problems/maximum-69-number/>
+[題目連接](https://leetcode.com/problems/maximum-69-number/)
 
 ```kotlin
 class Solution {
