--- a/kotlin/leetcode/1342.md
+++ b/kotlin/leetcode/1342.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1342. Number of Steps to Reduce a Number to Zero
 
-題目連接：<https://leetcode.com/problems/number-of-steps-to-reduce-a-number-to-zero/>
+[題目連接](https://leetcode.com/problems/number-of-steps-to-reduce-a-number-to-zero/)
 
 ```kotlin
 class Solution {
