--- a/kotlin/leetcode/136.md
+++ b/kotlin/leetcode/136.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 136. Single Number
 
-題目連接： <https://leetcode.com/problems/single-number/>
+[題目連接](https://leetcode.com/problems/single-number/)
 
 
 ```kotlin
