--- a/kotlin/leetcode/1365.md
+++ b/kotlin/leetcode/1365.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1365. How Many Numbers Are Smaller Than the Current Number
 
-題目連接：<https://leetcode.com/problems/how-many-numbers-are-smaller-than-the-current-number/>
+[題目連接](https://leetcode.com/problems/how-many-numbers-are-smaller-than-the-current-number/)
 
 ```kotlin
 class Solution {
