--- a/kotlin/leetcode/1389.md
+++ b/kotlin/leetcode/1389.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1389. Create Target Array in the Given Order
 
-題目連接：<https://leetcode.com/problems/create-target-array-in-the-given-order/>
+[題目連接](https://leetcode.com/problems/create-target-array-in-the-given-order/)
 
 ```kotlin
 class Solution {
