--- a/kotlin/leetcode/1431.md
+++ b/kotlin/leetcode/1431.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1431. Kids With the Greatest Number of Candies
 
-題目連接：<https://leetcode.com/problems/kids-with-the-greatest-number-of-candies/>
+[題目連接](https://leetcode.com/problems/kids-with-the-greatest-number-of-candies/)
 
 ```kotlin
 class Solution {
