--- a/kotlin/leetcode/1470.md
+++ b/kotlin/leetcode/1470.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1470. Shuffle the Array
 
-題目連接：<https://leetcode.com/problems/shuffle-the-array/>
+[題目連接](https://leetcode.com/problems/shuffle-the-array/)
 
 ```kotlin
 class Solution {
@@ -14,11 +14,11 @@ class Solution {
 
 這一題考的是對陣列的處理
 
-由於我想使用 when 
+由於我想使用 `when` 
 
 但是需要處理的邏輯比較多一點
 
-所以搭配了 also 這個 scope function 來協助表達
+所以搭配了 `also` 這個 scope function 來協助表達
 
 ## Kotlin 參考解答
 
