--- a/kotlin/leetcode/1476.md
+++ b/kotlin/leetcode/1476.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1476. Subrectangle Queries
 
-題目連接：<https://leetcode.com/problems/subrectangle-queries/>
+[題目連接](https://leetcode.com/problems/subrectangle-queries/)
 
 ```kotlin
 class SubrectangleQueries(rectangle: Array<IntArray>) {
