--- a/kotlin/leetcode/1480.md
+++ b/kotlin/leetcode/1480.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1480. Running Sum of 1d Array
 
-題目連接：<https://leetcode.com/problems/running-sum-of-1d-array/>
+[題目連接](https://leetcode.com/problems/running-sum-of-1d-array/)
 
 ```kotlin
 class Solution {
