--- a/kotlin/leetcode/1486.md
+++ b/kotlin/leetcode/1486.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1486. XOR Operation in an Array
 
-題目連接：<https://leetcode.com/problems/xor-operation-in-an-array/>
+[題目連接](https://leetcode.com/problems/xor-operation-in-an-array/)
 
 ```kotlin
 class Solution {
@@ -16,7 +16,6 @@ class Solution {
 
 ## Kotlin 參考解答
 
-
 <details>
   <summary>點擊展開解答</summary>
 
@@ -29,8 +28,6 @@ class Solution {
             .foldRight(0) { acc, c -> acc xor c }
 }
 ```
-
-
 
 </details>
 
