--- a/kotlin/leetcode/151.md
+++ b/kotlin/leetcode/151.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 151. Reverse Words in a String
 
-題目連接：<https://leetcode.com/problems/reverse-words-in-a-string/>
+[題目連接](https://leetcode.com/problems/reverse-words-in-a-string/)
 
 ```kotlin
 class Solution {
