--- a/kotlin/leetcode/1528.md
+++ b/kotlin/leetcode/1528.md
@@ -1,5 +1,6 @@
 ## Kotlin Leetcode - 1528. Shuffle String
-題目連接：<https://leetcode.com/problems/shuffle-string/>
+
+[題目連接](https://leetcode.com/problems/shuffle-string/)
 
 ```kotlin
 class Solution {
