--- a/kotlin/leetcode/153.md
+++ b/kotlin/leetcode/153.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 153. Find Minimum in Rotated Sorted Array
 
-題目連接：<https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/>
+[題目連接](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/)
 
 ```kotlin
 class Solution {
@@ -25,6 +25,7 @@ class Solution {
 使用的函數是  `minOrNull`
 
 ## Kotlin 參考解答
+
 leetcode 上的解答
 
 ```kotlin
