--- a/kotlin/leetcode/1588.md
+++ b/kotlin/leetcode/1588.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1588. Sum of All Odd Length Subarrays
 
-題目連接：<https://leetcode.com/problems/sum-of-all-odd-length-subarrays/>
+[題目連接](https://leetcode.com/problems/sum-of-all-odd-length-subarrays/)
 
 ```kotlin
 class Solution {
