--- a/kotlin/leetcode/1603.md
+++ b/kotlin/leetcode/1603.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1603. Design Parking System
 
-題目連接：<https://leetcode.com/problems/design-parking-system/>
+[題目連接](https://leetcode.com/problems/design-parking-system/)
 
 ```kotlin
 class ParkingSystem(big: Int, medium: Int, small: Int) {
