--- a/kotlin/leetcode/1662.md
+++ b/kotlin/leetcode/1662.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1662. Check If Two String Arrays are Equivalent
 
-題目連接：<https://leetcode.com/problems/check-if-two-string-arrays-are-equivalent/>
+[題目連接](https://leetcode.com/problems/check-if-two-string-arrays-are-equivalent/)
 
 ```kotlin
 class Solution {
