--- a/kotlin/leetcode/1672.md
+++ b/kotlin/leetcode/1672.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1672. Richest Customer Wealth
 
-題目連接：<https://leetcode.com/problems/richest-customer-wealth/>
+[題目連接](https://leetcode.com/problems/richest-customer-wealth/)
 
 ```kotlin
 class Solution {
