--- a/kotlin/leetcode/1678.md
+++ b/kotlin/leetcode/1678.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1678. Goal Parser Interpretation
 
-題目連接：<https://leetcode.com/problems/goal-parser-interpretation/>
+[題目連接](https://leetcode.com/problems/goal-parser-interpretation/)
 
 ```kotlin
 class Solution {
