--- a/kotlin/leetcode/168.md
+++ b/kotlin/leetcode/168.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 168. Excel Sheet Column Title
 
-題目連接：<https://leetcode.com/problems/excel-sheet-column-title/>
+[題目連接](https://leetcode.com/problems/excel-sheet-column-title/)
 
 ```kotlin
 class Solution {  
