--- a/kotlin/leetcode/1689.md
+++ b/kotlin/leetcode/1689.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1689. Partitioning Into Minimum Number Of Deci-Binary Numbers
 
-題目連接：<https://leetcode.com/problems/partitioning-into-minimum-number-of-deci-binary-numbers/>
+[題目連接](https://leetcode.com/problems/partitioning-into-minimum-number-of-deci-binary-numbers/)
 
 ```kotlin
 class Solution {
