--- a/kotlin/leetcode/169.md
+++ b/kotlin/leetcode/169.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 169. Majority Element
 
-題目連接：<https://leetcode.com/problems/majority-element/>
+[題目連接](https://leetcode.com/problems/majority-element/)
 
 ```kotlin
 class Solution {
