--- a/kotlin/leetcode/171.md
+++ b/kotlin/leetcode/171.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 171. Excel Sheet Column Number
 
-題目連接：<https://leetcode.com/problems/excel-sheet-column-number/>
+[題目連接](https://leetcode.com/problems/excel-sheet-column-number/)
 
 ```kotlin
 class Solution {
