--- a/kotlin/leetcode/1720.md
+++ b/kotlin/leetcode/1720.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1720. Decode XORed Array
 
-題目連接：<https://leetcode.com/problems/decode-xored-array/>
+[題目連接](https://leetcode.com/problems/decode-xored-array/)
 
 ```kotlin
 class Solution {
