--- a/kotlin/leetcode/1791.md
+++ b/kotlin/leetcode/1791.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1791. Find Center of Star Graph
 
-題目連接：<https://leetcode.com/problems/find-center-of-star-graph/>
+[題目連接](https://leetcode.com/problems/find-center-of-star-graph/)
 
 ```kotlin
 class Solution {
