--- a/kotlin/leetcode/1816.md
+++ b/kotlin/leetcode/1816.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1816. Truncate Sentence
 
-題目連接：<https://leetcode.com/problems/truncate-sentence/>
+[題目連接](https://leetcode.com/problems/truncate-sentence/)
 
 ```kotlin
 class Solution {
