--- a/kotlin/leetcode/1832.md
+++ b/kotlin/leetcode/1832.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1832. Check if the Sentence Is Pangram
 
-題目連接：<https://leetcode.com/problems/check-if-the-sentence-is-pangram/>
+[題目連接](https://leetcode.com/problems/check-if-the-sentence-is-pangram/)
 
 ```kotlin
 class Solution {
