--- a/kotlin/leetcode/1844.md
+++ b/kotlin/leetcode/1844.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1844. Replace All Digits with Characters
 
-題目連接：<https://leetcode.com/problems/replace-all-digits-with-characters/>
+[題目連接](https://leetcode.com/problems/replace-all-digits-with-characters/)
 
 ```kotlin
 class Solution {
