--- a/kotlin/leetcode/1859.md
+++ b/kotlin/leetcode/1859.md
@@ -1,5 +1,6 @@
 ## Kotlin Leetcode - 1859. Sorting the Sentence
-題目連接：<https://leetcode.com/problems/sorting-the-sentence/>
+
+[題目連接](https://leetcode.com/problems/sorting-the-sentence/)
 
 ```kotlin
 class Solution {
